Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -2685,7 +2685,7 @@
  INITIAL_HOTJOIN_REQUEST:0 "$PLAYER$がゲームへの参加を希望しています\n（許可した場合、$PLAYER$が国を選択しロードするまでゲームは一時停止されます）"
  COUNTRY_HOTJOIN_REQUEST:0 "$PLAYER$は$COUNTRY$でのゲームへの参加を希望しています"
  HOTJOIN_ACCEPTED:0 "サーバーは参加リクエストを許可しました。"
- HOTJOIN_DECLINED:0 "サーバーは参加リクエストを拒否しました。"
+ HOTJOIN_DECLINED:0 "サーバーから参加リクエストが拒否されました"
  HOTJOIN_SERVER_BUSY:0 "サーバーは現在ビジーです、後で再度お試しください。"
  HOTJOIN_NAMECONFLICT:0 "拒否されました。あなたの名前はすでに使われています。"
  HOTJOIN_LOBBY_REENTER:0 "HOTJOINの保留によりロビーが再入力されました。"
@@ -3090,21 +3090,21 @@
  MATCHMAKING_SERVER_NAME:0 "サーバー名"
  MATCHMAKING_SERVER_DESC:0 "説明"
  MATCHMAKING_SERVER_TAGS:0 "タグ"
- MATCHMAKING_SERVER_FILTER_SEARCH:0 "タグ検索"
+ MATCHMAKING_SERVER_FILTER_SEARCH:0 "タグ検索…"
  MATCHMAKING_SERVER_SLOTS:0 "人数"
  MATCHMAKING_SERVER_PING:0 "Ping"
  MATCHMAKING_SERVER_STATUS:0 "状態"
  MATCHMAKING_SERVER_PASSWORD:0 "パスワード"
  MATCHMAKING_SERVER_STATUS_STARTING:0 "起動中"
- MATCHMAKING_SERVER_STATUS_RUNNING:0 "実行中"
+ MATCHMAKING_SERVER_STATUS_RUNNING:0 "進行中"
  MATCHMAKING_SERVER_STATUS_STOPPED:0 "停止"
  MATCHMAKING_SERVERS:0 "サーバー"
  MATCHMAKING_TITLE:0 "ゲームブラウザ"
  MATCHMAKING_COMMUNITY:0 "コミュニティ"
  MATCHMAKING_SERVER_DENIED:0 "パスワードが間違っているか、このゲームから追放されています。"
- MATCHMAKING_FILTER_NOTFULL:0 "空席有り"
- MATCHMAKING_FILTER_HASPLAYERS:0 "プレイヤー有り"
- MATCHMAKING_FILTER_NOPASSWORD:0 "パスワード無し"
+ MATCHMAKING_FILTER_NOTFULL:0 "空きあり"
+ MATCHMAKING_FILTER_HASPLAYERS:0 "プレイヤーがいる"
+ MATCHMAKING_FILTER_NOPASSWORD:0 "パスワードなし"
  MATCHMAKING_FILTER_TAGS:0 "タグの検索"
  MATCHMAKING_FILTER_VERSION:0 "同じバージョン"
  MATCHMAKING_FILTER_MOD:0 "同じMOD"
