--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -945,11 +945,11 @@
  international_evangelism:0 "国際的な福音伝道"
  desc_international_evangelism:0 "我々は自身の信仰を守り、剣によってそれを広めるため、我が国の国境の向こうに目を向けなければならないと決断した。"
  dotf.2.t:0 "[jihad_target_province.GetName]へのジハード"
- dotf.2.d:0 "[jihad_target_country.GetName]の呪われた異教徒が[jihad_target_province.GetName]の聖都を占領した！これは耐え難いものであり、 [Root.Religion.GetName]信仰の擁護者として、外国の十字軍に対して偉大なジハードを宣言することは我々の義務である。我々はすべての忠実なイスラム教徒に対し、[jihad_target_province.GetName]とその苦しむ人々を守るために剣を取るよう呼びかける。"
+ dotf.2.d:0 "[jihad_target_country.GetName]の呪われた異教徒が[jihad_target_province.GetName]の聖都を占領した！これは耐え難いものであり、 [Root.Religion.GetName]信仰の擁護者として、外国の十字軍に対して偉大なジハードを宣言することは我々の義務である。我々はすべての忠実なムスリムに対し、[jihad_target_province.GetName]とその苦しむ人々を守るために剣を取るよう呼びかける。"
  dotf.2.a:0 "[jihad_target_province.GetName]を奪還するまで我々は休むことはない。"
- jihad_tt:0 "§Y[Root.Religion.GetName]§!信仰の全ての国家は、彼らと国境を共有する間、§Y[jihad_target_province.GetName]§!に対して、§Y聖戦§!の開戦事由を獲得します。\nジハードは§Y[jihad_target_province.GetName]§!が§Yイスラム教§!国家によって再征服された時に終了します。"
+ jihad_tt:0 "§Y[Root.Religion.GetName]§!信仰の全ての国家は、彼らと国境を共有する間、§Y[jihad_target_province.GetName]§!に対して、§Y聖戦§!の開戦事由を獲得します。\nジハードは§Y[jihad_target_province.GetName]§!が§Yムスリム§!国家によって再征服された時に終了します。"
  dotf.3.t:0 "[successful_jihad_province.GetName]へのジハードの成功"
- dotf.3.d:0 "異教徒の侵略者に対する我々の正当な努力は無駄ではなかった。我々は[successful_jihad_province.GetName]を再征服した！世界中のイスラム教徒が我々を賛美する歌を歌い、アッラーは確実に天から我々に微笑みかけている。"
+ dotf.3.d:0 "異教徒の侵略者に対する我々の正当な努力は無駄ではなかった。我々は[successful_jihad_province.GetName]を再征服した！世界中のムスリムが我々を賛美する歌を歌い、アッラーは確実に天から我々に微笑みかけている。"
  dotf.3.a:0 "神は善である！"
  end_of_jihad_tt:1 "[successful_jihad_province.GetName]へのジハードの終結"
  opinion_reconquered_holy_city:0 "聖都を再征服した"
