--- a/source/localisation/insults_l_english.yml
+++ b/source/localisation/insults_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  insult_default:1 "お前の母親は、むかし、ハムスターだったし、お前の父親はニワトリの食べる木の実の匂いがしたもんだ！"
  insult_default2:0 "裁きの日がやってくるぞ！ルシファーの手先が地上を闊歩しているーああ、違った。ただの[Root.GetAdjective]か。"
- insult_default3:0 "ともあれ、[Root.Capital.GetCapitalName]は滅ぶべきだと考える次第である。"
+ insult_default3:0 "ともあれ、[Root.Capital.GetCapitalName]は滅びるべきだと考える次第である。"
  insult_default4:0 "後世の人々によって我々の時代が記述される時、お前には哀れみと嫌悪の混ざった同情が向けられるだろう。"
  insult_default5:0 "最後にトイレに行った時の方が、[Root.GetAdjective]大使との会食よりもずっと楽しいものだったな。"
  insult_default6:0 "みて。こっちに素敵な汚物があるわ。"
@@ -19,7 +19,7 @@
  insult_rome:0 "我が軍が本当に全ての道がローマに通じているか確かめに行くだろう。"
  insult_heir_hunter:0 "貴方の後継ぎは、狩りに夢中のようだね。気をつけたほうがいいよ、予期せぬ事故が起こるかもしれないからね。"
  insult_monarchy:1 "お前の誇大妄想のせいでお前の兵士は苦労しているな。"
- insult_european_indian:0 "ここで胡椒を栽培しているのか？どうやら収穫の時期に間に合ったようだな…"
+ insult_european_indian:0 "ここで胡椒を栽培しているのか？どうやら我々は収穫の時期に間に合ったようだな…"
  insult_diamonds:0 "あなたは、永遠に輝き続けると言われるダイヤモンドを大量に持っているようですね。我々にいくらか分けていただければ、あなたの王朝より長持ちさせられますよ。"
  insult_christian_muslim:0 "お前のような異教徒がそのような豊かで繁栄した土地を獲得できたことは全く困った奇跡だ。幸いすぐに正されるだろうがな。"
  insult_against_bahmanis:0 "間もなくお前の財宝は我々のものになる。お前が大層大事にしている馬鹿げたトルコ石の椅子も含めてな。"
@@ -33,7 +33,7 @@
  insult_low_dipadm:0 "[Root.Monarch.GetName]の頭は、宦官のパンツのように空っぽだな。"
  insult_pvp:0 "プレーを勉強してこい、このヘタクソ！"
  insult_pvp2:0 "もっと頑張れよ。"
- insult_cossack_to_turk:0 "おお、スルタン。トルコの悪魔、悪魔の眷属、ルシファーの使いよ。"
+ insult_cossack_to_turk:0 "おお、スルタン。トルコの悪魔、呪われた悪魔の眷属、ルシファーの使いよ。"
  insult_muslim_truce:0 "我が息子達が今日を振り返った時、お前等が我等の髭を剃り落としている内にお前等の武器を除去できることが分かるだろうな。"
  insult_against_denmark:0 "デンマークでは何もかも腐っている。"
  insult_against_england:0 "[Root.Monarch.GetName]がテムズ川に落ちるのは不幸なことだろう。だが、[Root.Monarch.GetHerHim]を引き上げることは、大惨事である。"
@@ -71,6 +71,6 @@
  insult_pirates_1:0 "何が言いたい？お前はならず者か？私は7つの海を航海し、常に100を超える艦船を保有しているのだぞ。"
  insult_pirates_2:0 "お前の頭上にぶどう弾の雨を降らし、溺死させてやる。お前は海に沈むのだ、ならず者。"
  insult_pirates_3:0 "もしラムを飲みつづけるんなら、この世からまもなくとても薄汚れた悪党が一人消えていくとな！"
- insult_pirates_4:0 "私が飼っていた犬の方がお前より賢い。"
+ insult_pirates_4:0 "私が以前飼っていた犬のほうがお前より賢かったよ。"
  insult_pirates_5:0 "内臓をえぐられるか首をはねられるか、選ばせてやろう。"
  insult_jungle:0 "なるほど、[Root.GetName]が[From.GetName]よりも広大な領土を持っていることは認めなければいけないな。だがあなたは[From.Monarch.GetName]は人を支配し、[Root.GetName]は森と蚊を支配していることを認めなければならない。"
