--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -300,7 +300,7 @@
  ire_conquer_connacht_desc:0 "コノートの氏族は、軍隊が長期間存在しないため、イングランドの支配から安全だと信じている。これは続くことはない。我々は避けられないイングランドの再来に抵抗するため、これらの土地を獲得する必要がある。"
  unite_the_clans_ire_title:0 "氏族の団結"
  unite_the_clans_ire_desc:0 "アイルランドのすべての氏族は我々の支配下で統一されなければならない。そこには再びアイルランド上王が現れるだろう。"
- beyond_the_pale_title:0 "ペールを超えて"
+ beyond_the_pale_title:0 "ペイルを超えて"
  beyond_the_pale_desc:0 "ついに、アイルランドは一人の支配者の下に統一された。今やイングランド支配の最後の砦に注意を向けるべき時だ。"
  conquer_wales_title:0 "ウェールズの征服"
  conquer_wales_desc:0 "ウェールズの人々はかつてイングランド支配に抵抗した。臆病と不和により、彼らは征服された。我々はそれらの過ちを繰り返すことはない。"
@@ -766,7 +766,7 @@
  dlh_conquer_sind_desc:0 "シンドの領主は幸運にも多くのイスラム教徒の同胞を支配している。我々は大抵ヒンドゥー教の人々と良好な関係を築いているが、信仰上の同胞を受け入れる機会を持つべきだ。"
  dlh_conquer_rajputs_title:0 "ラージプーターナーの征服"
  dlh_conquer_rajputs_desc:0 "ラージプートの中で未だ残っている領主は我々の地域への継続的な拡張を本当に恐れている。その恐れを現実にする時だ。"
- dlh_textile_industry_title:0 "織物工房の拡大"
+ dlh_textile_industry_title:0 "繊維工業の拡大"
  dlh_textile_industry_desc:0 "ヒンドゥスターンは繊維産業の主要な中心地であり、インドの生地と絹の大部分を生産している。近代の生産方式に投資することは我々の経済を大いに高めるであろう。"
  dlh_textile_industry.tooltip:0 "§Y織物工場§!または§Y綿花§!を産出する§Y大規模農園§!を10州領有する"
  dlh_grand_trunk_road_title:0 "大幹道"
@@ -1287,7 +1287,7 @@
  gen_north_india_jains_desc:0 "ジャイナ教徒はずっと以前にインドにおいて支配宗教ではなくなったが、未だに残る共同体は決して無関係ではない。熟練した管理者や貸金業者として、彼らはまだ我が国家に貴重なサービスを提供しているかもしれない。"
  gen_north_india_gujarat_bengal_title:0 "インド海岸交易"
  gen_north_india_gujarat_bengal_desc:0 "理由は違えど、グジャラートとベンガルの港は非常に裕福だ。グジャラートはアラビアへのインド輸出の拠点である一方で、ベンガル港は東方からの香辛料の商人を歓迎する。自分自身のため、この富の源泉を手に入れないことはできない。"
- gen_north_india_textiles_title:0 "織物工房の拡大"
+ gen_north_india_textiles_title:0 "繊維工業の拡大"
  gen_north_india_textiles_desc:0 "インド北部は繊維産業の主要な中心地であり、膨大な量の絹や布、綿を生産している。効率的な生産手段への投資は、我が経済を大幅に向上させるだろう。"
  gen_north_india_powerful_subject_title:0 "強力な従属国"
  gen_north_india_powerful_subject_desc:0 "完全な征服が唯一の統治方法ではない。我々のために土地を管理する従属国を設立することにより、間接支配を行うことが時には賢明だ。国家を設立し、繁栄するように努めるべきだ。"
