Save/Update files [ci skip]

--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -22,7 +22,7 @@
  emp_bav_italian_sun_title:0 "イタリアへの拡大"
  emp_bav_italian_sun_desc:0 "古くからバイエルンの民は、アドリア海沿岸の爽やかな潮風に大きな憧れを抱いてきた。今我が国は[Root.GovernmentName]の為にそのような領土を獲得できる立場にある。ヴェネツィアとカルニオラを我らが手に収めねばなるまい！"
  emp_bav_oktoberfest_mission_title:0 "オクトーバーフェストの開始"
- emp_bav_oktoberfest_mission_desc:0 "国家の栄光や統治者たちの偉大さや民衆のすばらしさや馬の速さやビールの味を称賛する祝祭を毎年行なうなら、我々の威信と名声は間違いなく誰にも劣らぬものとなるだろう。"
+ emp_bav_oktoberfest_mission_desc:0 "我が国の栄光や統治者たちの偉大さや民衆のすばらしさや馬の速さやビールの味を称賛する祝祭を毎年行なうなら、我々の威信と名声は間違いなく誰にも劣らぬものとなるだろう。"
  emp_bav_illuminati_mission_title:0 "イルミナティとの取引"
  emp_bav_illuminati_mission_desc:0 "我らが栄光ある[Root.GovernmentName]は「啓蒙主義者」を自称する秘密結社の台頭に直面している。彼らの目的のいくつかには価値を認められるが、その他のものは潜在的に危険なものであり、革命思想に依拠している。我々はこの問題に対して毅然とした態度を取るべきだ。計画の採用か、組織の追放か。"
  emp_bav_cultural_center_title:0 "[Root.Capital.GetCapitalName]の開発"
@@ -41,7 +41,7 @@
  emp_bav_tame_brandenburg_title:0 "ブランデンブルクの平定"
  emp_bav_tame_brandenburg_desc:0 "ブランデンブルクは、かつてヴィッテルスバッハ家が領有していた地域の一つである。それなのに、新参者のホーエンツォレルン家は北ドイツに独自の強大な国家を樹立する野望を持っている。我々はその野望が夢に過ぎないことを思い知らさなければならない。"
  emp_bav_netherlands_title:0 "バイエルン領低地地方"
- emp_bav_netherlands_desc:1 "バイエルンは誰もが認めるように、低地地方の各地域にわずかな請求権を持っている。それはただの権利でしかないように見えるが、いまや我々はバイエルンの国力をほぼかつての栄光の時代のものにまで回復させ、その請求権を復活させてこの豊かな地方を再び支配下に置こうとしているのだ。"
+ emp_bav_netherlands_desc:1 "バイエルンは誰もが認めるように、低地地方の各地域にわずかな請求権を持っている。いまや我々はバイエルンの国力をほぼかつての栄光の時代のものにまで回復させているのだから、その請求権を復活させてこの豊かな地方を再び支配下に置くのは当然だと思われる。"
  theocracy.1.desc.KOL_secondogeniture_of_BAV:0 "現在後継者が存在しないため、[probably_bavaria.GetUsableName]は[probably_bavaria.Monarch.Dynasty.GetName]家の貴公子を後継者の座に据えるために送ってきました。"
  theocracy.1.i:0 "それならそれでよい。"
  new_flavour_bav.10.t:0 "プファルツ選帝侯のバイエルンへの移管？"
@@ -69,7 +69,7 @@
  bav_splendorous_bavaria:0 "華麗なるバイエルン"
  desc_bav_splendorous_bavaria:0 "我々の壮麗さが際立つようになったため、ヨーロッパの統治者たちは期待の星として我々に注目している。"
  bav_established_oktoberfest:0 "オクトーバーフェスト"
- desc_bav_established_oktoberfest:0 "我々は国家の栄光や統治者たちの偉大さや民衆のすばらしさや馬の速さやビールの味を称賛する祝祭を毎年行うことにした。"
+ desc_bav_established_oktoberfest:0 "我々は、我が国の栄光や統治者たちの偉大さや民衆のすばらしさや馬の速さやビールの味を称賛する祝祭を毎年行うことにした。"
  bav_tamed_brandenburg:0 "ブランデンブルクの平定"
  desc_bav_tamed_brandenburg:0 "ブランデンブルグの脅威に終止符を打ったことで、彼の国の軍の熟練した教官や戦略家を活用し、我が軍の質を高められるようになった。"
  bav_piety_shown:0 "信仰心"
@@ -113,7 +113,7 @@
  emp_sax_mission_spread_dynasty_desc:0 "[Root.Monarch.Dynasty.GetName]家は長く際立った歴史を有している。未来へと積み重ねてきた威信と影響力を守り、我々はさらなる称号を一族のために探し求めて、[Root.Monarch.Dynasty.GetName]家の者たちが可能な限り多くの王座を確実に占めるようにしなければならない。"
  emp_sax_mission_spread_nodynasty_desc:0 "我が国の強さは軍事よりも外交によるところが大きい。我々と同じように考えている国々との関係を強化しなければならない。"
  emp_sax_become_king_title:0 "王位戴冠"
- emp_sax_become_king_desc:0 "[Root.GetName]は自力で王位を請求することができるまで、二流以上の国と見なされることは決してないだろう。"
+ emp_sax_become_king_desc:0 "[Root.GetName]は自力で王位を請求することができるまで、二流より上の国と見なされることは決してないだろう。"
  emp_sax_manufacturing_title:0 "ザクセンの製造業"
  emp_sax_manufacturing_desc:0 "ザクセンには豊かな天然資源がある。こうした原材料を完成品に変えることで我々はこの国を大いに繁栄させることができるだろう。"
  emp_sax_meissen_porcelain_title:0 "マイセン磁器"
