--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -961,7 +961,7 @@
  subject_interaction_events.25.t:0 "紳士と士官"
  subject_interaction_events.25.d:0 "彼らが我々の保護国の一つで軍の指導者として働くため我々の国を去る前に、すべての士官たちの心に刻もうとした行動規範は、時間の無駄ではなかったかもしれない。我々は、これらの士官が示している行動や厳しい規律がいかに印象的であるかを賞賛する書簡を受け取った。我々は全国的に、紳士たちを我々の士官から輩出することができたことを誇りに思うべきだ。"
  subject_interaction_events.25.a:0 "我々はこの上なく誇りに思う。"
- subject_interaction_events.26.t:0 "より多くを売り、より多くの種を撒き、より多くを育てる"
+ subject_interaction_events.26.t:0 "より多く、売り、種を撒き、育てる"
  subject_interaction_events.26.d:0 "我々は保護国の交易を支配し、彼らが育て生産するすべてのものを輸出するほど、収穫は大規模なものである！どういうわけか、我々は生産の質と量の双方を増やすことができ、交易力も向上した。"
  subject_interaction_events.26.a:0 "質と量、それが現実だ。"
  subject_interaction_events.27.t:0 "輸出効果の悪化"
