--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -11,7 +11,7 @@
  ACTIVE_POLICY_INTERACTION_TOOLTIP_REMOVE:0 "\n§Yこの政策を排除するには右クリック§!"
  ACTIVE_POLICY_INTERACTION_TOOLTIP_DESC:0 "我々は$IDEA1|Y$と$IDEA2|Y$を完了しているため、この政策を利用できます。"
  estate_maratha:0 "マラーター"
- estate_maratha_desc:0 "もともとは、マラーターとは、すべてのマラーター語を話す民を指していたが、マラーターは自分たちを戦士のカーストと自認してきた。マラーターは、マハラシュトラの生まれ故郷とその周辺の両方で見られ、すぐれた軍事奉仕の機会を探し求める。"
+ estate_maratha_desc:0 "もともとは、マラーターとは、すべてのマラーター語を話す民を指していたが、マラーターは自分たちを戦士のカーストと自認してきた。マラーターは、マハーラーシュトラの生まれ故郷とその周辺の両方で見られ、すぐれた軍事奉仕の機会を探し求める。"
  estate_jains:0 "ジャイナ教徒"
  estate_jains_desc:0 "ジャイナ教はインドにおいてもはや支配的でもなく政治的に好まれもしない信仰であるが、ジャイナ教徒がもう重要ではないということでは全くない。ジャイナ教徒は貸金業と官僚制のなかに居場所を見出しており、彼らに保護を与える国家にとって彼らは有益な存在となっているのだ。"
  estate_vaisyas:0 "ヴァイシャ"
