Save/Update files [ci skip]

--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -447,7 +447,7 @@
  take_capital_liberation_desc:0 "戦争の目標は首都を占領することです。"
  superiority_liberation:0 "優位性を示す"
  superiority_liberation_desc:0 "戦争の目標は戦闘に勝利して優位性を示すことです。"
- superiority_crusade:0 "不信信者のイヌ共に優位性を示す"
+ superiority_crusade:0 "不信心な犬どもに優位性を示す"
  superiority_crusade_desc:0 "戦争の目標は戦闘に勝利して優位性を示すことです。"
  take_province_religion:0 "州を占領する"
  take_province_religion_desc:0 "戦争の目標は州を占領することです。"
