--- a/source/localisation/emperor_revolutions_l_english.yml
+++ b/source/localisation/emperor_revolutions_l_english.yml
@@ -16,7 +16,7 @@
  french_revolution.303.desc:0 "頻繁な粛清により、革命の敵は恐怖に怯えている。誰も政府が定めた方針に反対して声を上げる勇気がなく、国はかつてないほど団結している。全ての栄光は[Root.Monarch.GetTitle][Root.Monarch.GetName]へ！"
  french_revolution.303.A:0 "我々を愛さないのであれば、恐れさせるだけだ。"
  french_revolution.5.female:0 "革命以来、王妃をはじめとする王族はチュイルリー宮殿に軟禁され、新体制の消極的な操り人形と化していた。王妃は革命の社会的進歩を保証すると約束していたが、自分に課せられたこの汚れた立憲君主制への軽蔑を隠そうとはせず、代わりに[flee_to_country.GetUsableName]に逃亡して敵と一緒に避難することを計画した。しかし、革命軍は彼女が国境を越える前に 阻止しました。\n\nこれは王政を軽蔑する者たちや立憲君主制の敵を永久に排除したいと願う者たちを扇動した。彼らは王妃を国民議会に連行し、外国勢力と共謀した罪と裏切り者の罪で裁判にかけようとしています。有罪判決を受けた場合、王妃は退位を余儀なくされ、すべての肩書きを剥奪され、ギロチンによって処刑されます。しかし、緊張は高まっており、投票は接戦になりそうです。"
- french_revolution.5.male:0 "革命以来、国王をはじめとする王族はチュイルリー宮殿に軟禁され、新体制の消極的な操り人形と化していた。国王は革命の社会的進歩を保証すると約束していたが、自分に課せられたこの汚れた立憲君主制への軽蔑を隠そうとはせず、代わりに[flee_to_country.GetUsableName]に逃亡して敵と一緒に避難することを計画した。しかし、革命軍は国王が国境を越える前に 阻止しました。\n\nこれは王政を軽蔑する者たちや立憲君主制の敵を永久に排除したいと願う者たちを扇動した。彼らは国王を国民議会に連行し、外国勢力と共謀した罪と裏切り者の罪で裁判にかけようとしています。有罪判決を受けた場合、国王は退位を余儀なくされ、すべての肩書きを剥奪され、ギロチンによって処刑されます。しかし、緊張は高まっており、投票は接戦になりそうです。"
+ french_revolution.5.male:0 "革命以来、国王をはじめとする王族はチュイルリー宮殿に軟禁され、新体制の消極的な操り人形と化していた。国王は革命の社会的進歩を保証すると約束していたが、自分に課せられたこの汚れた立憲君主制への軽蔑を隠そうとはせず、代わりに[flee_to_country.GetUsableName]に逃亡して敵と一緒に避難することを計画した。しかし、革命軍は国王が国境を越える前に阻止した。\n\nこれは王政を軽蔑する者たちや立憲君主制の敵を永久に排除したいと願う者たちを扇動した。彼らは国王を国民議会に連行し、外国勢力と共謀した罪と裏切り者の罪で裁判にかけようとしている。有罪判決を受けた場合、国王は退位を余儀なくされ、すべての肩書きを剥奪され、ギロチンによって処刑されるだろう。しかし、緊張は高まっており、投票は接戦になりそうだ。"
  french_revolution.8.desc:0 "我々の敬愛する[Root.Monarch.GetTitle]が暗殺された！王党派の陰謀者たちは、ナポレオンがヨーゼフ・ハイドンのオラトリオ『天地創造』の初演を鑑賞するためにオペラ座へと向かう途中の、サン・ニケーズ通りに止めた馬車の上の樽の中に爆弾を隠した。「地獄機械」と名付けられたこの爆弾は火薬、可燃性物質、弾丸が詰め込まれており、長い導火線によって起爆された。爆発はナポレオンが近づいた瞬間に起こり、彼は即死した。"
  french_revolution.8.B:0 "なんという悲劇だ！"
  rus_revolutionary_zeal:0 "ロシア革命"
