Save/Update files [ci skip]

--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -1427,7 +1427,7 @@
  free_cities.11.a:0 "彼らは我々の支援を待つことになる。"
  free_cities.11.b:0 "彼らが市民を処置することができないのであれば、彼らは本当に国を支配するのに適しているのか？"
  free_cities.12.t:0 "助けるか、妨げるか？"
- free_cities.12.d:1 "貴族たちは大胆になってきており、そして、農民や市民たちが我々と自由都市としての地位に対抗して反乱軍に加わっている。これまでのところ、彼らはこれによりほとんど成功していないが、何人かの洒落た姓を持つ傲慢な公爵たちが平和を粉砕しようとしているとき我々が常にそうであるように、我々の戦いがとても困難になることを恐れている。[From.Country.GetName]の[From.Monarch.GetTitle][From.Monarch.GetName]は我々についてどう考えているのだろうか？ [From.Monarch.GetSheHe]は、約束を守り、これらの手に負えない貴族たちと決着をつけてくれるのだろうか？"
+ free_cities.12.d:1 "貴族たちは大胆になってきており、農民や市民たちを雇おうとし始めた。反乱に加わらせて我々および我らの自由都市としての地位に逆らおうというのだ。今のところはうまくいっていないが懸念材料だ。なぜなら、ごてごてした姓を名乗る傲慢な公爵たちによる平和を粉砕しようという試みに対して、我々はいつも苦労して平和を維持してきたからだ。[From.Country.GetName]の[From.Monarch.GetTitle][From.Monarch.GetName]は我々についてどう考えているのだろうか？ [From.Monarch.GetSheHe]は、約束を守り、これらの手に負えない貴族たちと決着をつけてくれるのだろうか？"
  free_cities.12.a:0 "助けが[From.Monarch.GetTitle]から到着した！"
  free_cities.12.b:0 "「…支配には不向きだ…」だから、助けは送らない"
  free_cities.13.t:0 "都市同盟"
