Save/Update files [ci skip]

--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -6,11 +6,11 @@
  switzerland_nation_title:0 "スイス連邦の復活"
  switzerland_nation_desc:0 "我が国は、単独では脆弱だ。侵略者たちに抵抗し皆の自由を守るには、諸領邦の統一戦線を結成し、スイス人民を統合せねばならない。"
  silesia_nation_title:0 "シレジア国家の形成"
- silesia_nation_desc:0 "何世紀もの間、シレジアはいくつもの公国に分かれ、外国支配を受けてきました。今こそ外国支配や内部分裂を乗り越え、シレジアとして再統合する時です。"
+ silesia_nation_desc:0 "何世紀もの間、シレジアはいくつもの公国に分かれ、外国支配を受けてきました。外国支配や内部分裂を乗り越えた今こそ、シレジアを再統合するのです。"
  military_dictatorship_reform:1 "軍事独裁制"
- military_dictatorship_reform_desc:1 "軍事的な独裁者が権力を掌握し、独裁者として国家を支配している。新たな支配者は必ず将軍の中から選ばれる。"
+ military_dictatorship_reform_desc:1 "軍人が独裁者として国家を支配している。新たな支配者は必ず将軍たちの中から選ばれる。"
  military_dictatorship:0 "軍事独裁制"
- military_dictatorship_desc:0 "軍事的な独裁者が権力を掌握し、独裁者として国家を支配している。新たな支配者は必ず将軍の中から選ばれる。"
+ military_dictatorship_desc:0 "軍人が独裁者として国家を支配している。新たな支配者は必ず将軍たちの中から選ばれる。"
  MILITARY_GOVERNMENT:0 "軍事共和制"
  ambrosian_republic.1.t:0 "ミラノの安定した政府"
  ambrosian_republic.1.d:0 "我々は困難を乗り越え、アンブロジアーナ黄金共和国を成立させた。ついに自由が勝利を収めたのだ。暗黒の封建主義時代に戻ってはいないし、軍事独裁制に陥ってもいない。平和で、公正で、そして自由な社会が、[Root.GetName]に実現したのだ。"
@@ -89,19 +89,19 @@
  great_peasant_war.4.t:0 "大農民戦争の終結"
  great_peasant_war.4.d:0 "大部分の地域において、農民反乱は沈静化し、彼らは社会の最下層という自らの本来の地位を受け入れるようになった。"
  great_peasant_war.4.a:0 "主よ感謝します"
- end_gpw_tt:0 "§Y大農民戦争は終わりを迎えます。§!"
+ end_gpw_tt:0 "§Y大農民戦争が終結します。§!"
  king_in_prussia.1.t:0 "プロイセンの王冠"
  king_in_prussia.1.d:0 "偉大なる我らの国がさらなる高みへと昇りつめようとしている中で、[Root.Monarch.GetTitle]は、プロイセンを王国に昇格させ、自身がその王に即位しようとしていることを明らかにした。だが帝国諸侯は、こうした問題が発生したとき、皇帝の裁可を仰がねばならない。彼は皇帝に対し、この問題について慎重に判断するよう要請した。"
- king_in_prussia.1.a:0 "我々は王になるべきだ"
+ king_in_prussia.1.a:0 "我々は王になるのだ！"
  king_in_prussia.2.t:0 "プロイセンの王"
  king_in_prussia.2.d:1 "新興国家プロイセンは帝国内での影響力を増し、今や国際政治の舞台でも強国としての地位を確固たるものとしている。 そうした中、[PRU.Monarch.GetTitle][PRU.Monarch.GetName]はプロイセン王国を創設し、国の地位を[PRU.GovernmentName]から引き上げると宣言した。しかしこれは神聖ローマ帝国内ではほぼ前例のないことである。この問題をどう処理するか、皇帝に決断が迫られている。"
  king_in_prussia.2.a:0 "プロイセンを王国に昇格させよう。"
  king_in_prussia.2.b:0 "プロイセン国内に限って、王号を用いることを認めよう。"
- king_in_prussia.2.c:0 "こんなことを認めてはならない！"
+ king_in_prussia.2.c:0 "こんなことを認めるわけにはいかない！"
  king_in_prussia.3.t:0 "プロイセンの王"
  king_in_prussia.3.d:0 "我らの親友にして盟友、皇帝[emperor.Monarch.GetName]陛下は、プロイセンを王国に昇格させることを快諾して下さった。このような特権が与えられたのは、ボヘミアの台頭以来初めてのことだ。これからのプロイセン王は自らの王冠に対し誇りを持ち、皇帝からの恩義を常に忘れないようにすることだろう！"
  king_in_prussia.3.d2:0 "帝国では伝統的に、帝国内における王はローマ王すなわち皇帝と、ボヘミア王のみとされている。だが、交渉の末皇帝は妥協し、我々に対し「プロイセンにおける王」の称号の使用を認めた。プロイセンは神聖ローマ帝国の領域外にあるため、そこでは帝国の伝統を破ることなく、王号を用いることができる、というわけだ。"
- king_in_prussia.3.d3:0 "恥知らずの悪党である皇帝は、我々が合理的な妥協案を示したにも関わらず、我々が王号を用いることを認めなかった。だがそのようなことを気にする必要はない。これからは我々は王と名乗ることにしよう。"
+ king_in_prussia.3.d3:0 "恥知らずの悪党である皇帝は、我々が合理的な妥協案を示したにも関わらず、我々が王号を用いることを認めなかった。だがそのようなことを気にする必要はない。これ以後、我々は王と名乗るだろう。"
  king_in_prussia.3.a:0 "感謝いたします。皇帝陛下。"
  king_in_prussia.3.b:0 "妥協点としては十分だ。"
  king_in_prussia.3.c:0 "皇帝の許しなど不要だ！"
@@ -110,8 +110,8 @@
  opinion_prussia_not_recognized:0 "プロイセンの正統性を否定した"
  emp_mission_events.10.t:0 "アランソン公"
  emp_mission_events.10.d:0 "百年戦争中、アランソン公はイングランド軍の侵攻により自らの領土を追われた。公国の伝統的な領土がフランスの手に戻った今、ヴァロワ=アランソン家の生き残った貴族たちは、[Root.Monarch.GetTitle]に対し、失われた領土と称号の回復を求めている。"
- emp_mission_events.10.a:0 "公爵領を返還しよう。"
- emp_mission_events.10.b:0 "アランソンは王領になるべきだ。"
+ emp_mission_events.10.a:0 "アランソンを返還しよう。"
+ emp_mission_events.10.b:0 "以後、アランソンは王領とする。"
  EST_VAL_DUKE_OF_ALENCON:0 "アランソン公爵: §Y$VAL$%§!"
  admiralty_reform:0 "海軍本部委員会"
  admiralty_reform_desc:0 "我々の盛衰の如何は海上で力を発揮できるかどうかにかかっている。そのため、我々は政府の手綱を海軍本部委員会に引き渡した。彼らは経験豊富で愛国心に溢れていて、非の打ちどころがない。\n\n選挙を無効にします。"
@@ -138,19 +138,19 @@
  scandalized_papacy:0 "教皇のスキャンダル"
  desc_scandalized_papacy:0 "申し立てがあったボルジア家の動きは、教皇庁の評判を汚すものだ。"
  borgia_diplomacy:0 "ボルジアの外交"
- desc_borgia_diplomacy:0 "ボルジア家についてはいくつもの黒い噂が流されているが、優れた外交手腕を持つ彼らは、敵により自らの評判が貶められることを決して許さない。"
+ desc_borgia_diplomacy:0 "ボルジア家についてはいくつもの黒い噂が流されている。しかし、優れた外交手腕を持つ彼らは、敵により自らの評判が貶められることを決して許さない。"
  flavor_pap.16.t:0 "ボルジア家の教皇"
- flavor_pap.16.d:0 "システィーナ礼拝堂の屋根から白い煙が立ち上った。聖職売買が行われている、とする告発が相次いでいるが、コンクラーベはバレンシア大司教ロドリーゴ・ボルジアをサン・ピエトロの聖座に選出した。ボルジア家はつい最近ローマの政治の舞台に現れた新参者であるため、このことで彼らは教皇の位を目指すローマの有力諸家の怒りを買うこととなった。\n\n彼についての多くの噂には敵による誇張が多分に含まれている。しかし、彼は公然と愛人を持っているうえ、さらにはまだ10代の息子チェーザレを枢機卿に昇格させてしまった。多くの人々が、この教皇の治世は汚職とスキャンダルまみれのものとなるだろう、と考えている。"
+ flavor_pap.16.d:0 "システィーナ礼拝堂の屋根から白い煙が立ち上った。聖職売買が行われている、とする告発が相次いでいるが、コンクラーベはバレンシア大司教ロドリーゴ・ボルジアをサン・ピエトロの聖座に選出した。しかしボルジア家はつい最近ローマの政治の舞台に現れた新参者であり、このことで彼らは教皇の位を目指すローマの有力諸家の怒りを買うこととなった。\n\n彼についての噂の多くには敵による誇張が多分に含まれている。しかし、彼は公然と愛人を持っているうえ、さらにはまだ10代の息子チェーザレを枢機卿に昇格させてしまっている。多くの人々が、この教皇の治世は汚職とスキャンダルまみれのものとなるだろう、と考えている。"
  flavor_pap.16.a:0 "教皇制は存続するのだ…"
  flavor_pap.17.t:0 "チェーザレ・ボルジア"
- flavor_pap.17.d:0 "教皇の息子チェーザレ・ボルジアは、歴史上で初めて、枢機卿を辞任した男となった。そして軍事指導者となった彼は、すでに自らが優秀なコンドッティエーレであるということを示した。そこで教皇は彼の能力を認め、彼を教皇領軍の総司令官に任命し、全軍の指揮権を彼に譲渡した。"
- flavor_pap.17.a:0 "すべてを得るか、それとも死か！"
+ flavor_pap.17.d:0 "教皇の息子チェーザレ・ボルジア(It:Cesare Borgia)は、歴史上で初めて、枢機卿を辞任した男となった。そして軍事指導者となった彼は、すでに自らが優秀なコンドッティエーレであるということを示した。そこで教皇は彼の能力を認め、彼を教皇領軍の総司令官に任命し、全軍の指揮権を彼に譲渡した。"
+ flavor_pap.17.a:0 "Aut Caesar, aut nihil.(すべてを得るか、それとも死か!)"
  flavor_pap.18.t:0 "教皇のスキャンダル"
  flavor_pap.18.d:0 "ボルジア家の行いをめぐり、数多くの黒い噂が流されている。彼らは今、政敵を排除するため、殺人―強力かつ検出困難な猛毒、「カンタレラ」による―を行ったとして、激しい非難を浴びている。教皇自身ですら、聖職売買や汚職に手を染めており、そして彼の子女、チェーザレとルクレツィアに対しては、さらに卑劣な行いをしていると囁かれている。こうした非難の多くは何の根拠もないことだが、それでもカトリック教徒の多くはそうした噂を本当のことだと信じている。"
- flavor_pap.18.a:0 "嘘だ！"
- flavor_pap.18.b:0 "この状況を我々の有利に変えることができる。"
- flavor_pap.19.t:0 "ボルジア家の教皇の終わり"
- flavor_pap.19.d:0 "ボルジア家の教皇の死は、ローマの貴族たちの間で静かな祝福をもって迎えられた。枢機卿たちは彼の後任に、ボルジア家の長年の政敵の1人を選んだ。[Root.Monarch.GetName]は、彼の前任者によってもたらされた腐敗を元に戻し、教会の神聖性に対する信頼を取り戻すと宣言している。\n\n一方で、チェーザレ・ボルジアの権力は教皇の支持を失ったことで、一晩のうちに崩れ去った。命の危険を感じた彼は敵の危険から逃れるため、希望の地、ナバラへと逃れた。"
+ flavor_pap.18.a:0 "事実無根だ！"
+ flavor_pap.18.b:0 "これも何かに利用できるかもしれない。"
+ flavor_pap.19.t:0 "ボルジア教皇の死"
+ flavor_pap.19.d:0 "ボルジア家の教皇の死は、ローマの貴族たちの間で静かな祝福をもって迎えられた。枢機卿たちは彼の後任に、ボルジア家の長年の政敵の1人を選んだ。[Root.Monarch.GetName]は、彼の前任者によってもたらされた腐敗を元に戻し、教会の神聖性に対する信頼を取り戻すと宣言している。\n\n一方、教皇の支持を失ったチェーザレ・ボルジアの権力は一夜にして崩れ去った。命の危険を感じた彼は敵の危険から逃れるため、希望の地、ナバラへと逃れた。"
  flavor_pap.19.d2:0 "ボルジア家の教皇の死は、ローマの貴族たちの間で静かな祝福をもって迎えられた。枢機卿たちは彼の後任に、ボルジア家の長年の政敵の1人を選んだ。[Root.Monarch.GetName]は、彼の前任者によってもたらされた腐敗を元に戻し、教会の神聖性に対する信頼を取り戻すと宣言している。"
  flavor_pap.19.a:0 "教会の名誉を取り戻さなければ…"
  flavor_pap.20.t:0 "チェーザレ・ボルジアの到着"
@@ -198,7 +198,7 @@
  dutch_revolt.2.a:0 "オランダ人たちを支持しよう。"
  dutch_revolt.2.b:0 "介入すべきではない。"
  dutch_revolt.2.c:0 "彼らは正当な[dutch_revolt_country.GetName]の国民だ。"
- dutch_will_leave_later:0 "§Yオランダが戦争において力のある立場であることを明らかにした場合、彼らは神聖ローマ帝国を去るでしょう§!。"
+ dutch_will_leave_later:0 "§Yオランダが戦争においてその力を示した場合、彼らは神聖ローマ帝国から離脱するでしょう。§!"
  dutch_revolt.3.t:0 "オランダが帝国を離脱"
  emperor_helped_dutch:0 "オランダの独立を支持した"
  emperor_sided_against_dutch:0 "オランダの独立に反対した"
@@ -225,7 +225,7 @@
  bavaria_nation_title:0 "バイエルンを形成"
  bavaria_nation_desc:0 "かつての誇り高きバイエルン公国は分裂し弱体化している。歴史の隅に追いやられたくないならば、かつての領土を再び統合し、かつての栄光を取り戻さねばならない。"
  pomerania_nation_title:0 "ポメラニアを形成"
- pomerania_nation_desc:0 "相続法に基づき分割されたことで、ポメラニア公国は弱体化しています。バルト海沿岸諸国やブランデンブルクなどの勢力による攻撃に耐えるためには、強力なポメラニア国家を形成しなければなりません。"
+ pomerania_nation_desc:0 "相続法に基づき分割されたことで、ポメラニア公国は弱体化した。バルト海沿岸諸国やブランデンブルクなどの勢力による攻撃に耐えるためには、強力なポメラニア国家を形成しなければならない。"
  franconia_nation_title:0 "フランケンを形成"
  franconia_nation_desc:0 "フランケンの古い公国の記憶は、野心的な地方の支配者の記憶の中で生き続けている。ヴュルツブルク司教君主がその称号を主張しているものの、しかし実際には、何世紀にもわたってその地には不在であり、かつての領土は不統一に満ちている。この統一状態は回復されるべきであり、それによりフランケンは再びドイツで一大勢力とみなされるだろう。"
  swabia_nation_title:0 "シュヴァーベンを形成"
@@ -1282,7 +1282,7 @@
  QUEEN_PALATINE:0 "女宮中王"
  EST_VAL_VIJ_PROTECT_JAINS:0 "ジャイナ教徒社会の保護: §G$VAL$§!"
  imperial_diplomacy_reform:0 "帝国の外交"
- imperial_diplomacy_reform_desc:0 "都市は皇帝や他の同盟国の支援なしでは独立を維持できない。我々は外交関係の強化に力を注ぐべきであり、必要になったときはいつでも、友が我々の都市を守るためにそこにいることを保証する。"
+ imperial_diplomacy_reform_desc:0 "都市は皇帝や他の同盟国の支援なしでは独立を維持できない。我々は外交関係を強化し、また、我々が窮地に陥った際には友が都市を防衛すると請け合うようにすることに注力すべきだ。"
  municipal_self_defense_reform:0 "都市の自衛"
  municipal_self_defense_reform_desc:0 "都市の軍事力に頼ることによってのみ、我々は自身の生存を確実にすることができる。我々は都市の見張り部隊の隊長により多くの政治力を割り当てるべきであり、それにより、彼らが防衛のために提供する必要があるすべてを持っていることを確認する。"
  austrian_archduchy_reform:0 "オーストリア大公国"
