--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -708,11 +708,11 @@
  muslim_piety.1.a:1 "[spread_of_extreme_practices_province.GetAreaName]から追放せよ。"
  muslim_piety.1.b:1 "放っておけ。"
  muslim_piety.2.t:1 "帰国奨学生"
- muslim_piety.2.d:1 "特に13世紀のモンゴル征服の後、エジプトとシリアはイスラム世界において学問学習の第一の中心地として浮上しました。スンナ派のあらゆる説得者がダマスカスとカイロに集まり、科学、神学、そしてすべての法律の教師から学び、その傍らで、シーア派はレバノンのジャバル・アメルを旅行して、正統十二イマーム派の学者たちと会いました。我々の国から出た多くの奨学生は、教育巡礼を終え帰国し、イスラムの心臓部で学んだように、イスラム律法主義を我々の[Root.GovernmentName]で実現しようとしています。"
+ muslim_piety.2.d:1 "特に13世紀のモンゴル征服の後、エジプトとシリアはムスリム世界において学問学習の第一の中心地として浮上しました。スンナ派のあらゆる説得者がダマスカスとカイロに集まり、科学、神学、そしてすべての法律の教師から学び、その傍らで、シーア派はレバノンのジャバル・アメルを旅行して、正統十二イマーム派の学者たちと会いました。我々の国から出た多くの奨学生は、教育巡礼を終え帰国し、イスラムの心臓部で学んだように、イスラム律法主義を我々の[Root.GovernmentName]で実現しようとしています。"
  muslim_piety.2.a:1 "彼らを我々の国に歓迎しよう。"
  muslim_piety.2.b:1 "神を理解することは、本を読むだけでは適わない。"
  muslim_piety.3.t:1 "スーフィー組織が支持を集める "
- muslim_piety.3.d:1 "近世の間、人気のあるスーフィー崇拝がイスラム世界で急速に広まった。我々の軍隊の弱体化した状態を見て、主要階級のシャイフ（族長）は、彼らの郎党に我々を支えるため我々の敵に対して武器を取るよう促し始めた。"
+ muslim_piety.3.d:1 "近世の間、人気のあるスーフィー崇拝がムスリム世界で急速に広まった。我々の軍隊の弱体化した状態を見て、主要階級のシャイフ（族長）は、彼らの郎党に我々を支えるため我々の敵に対して武器を取るよう促し始めた。"
  muslim_piety.3.a:1 "我々は支援のために神秘主義者たちに頼ることはできない！"
  muslim_piety.3.b:1 "これら信仰の戦士たちを歓迎しよう。"
  muslim_piety.4.t:1 "宗教の調和"
@@ -723,7 +723,7 @@
  muslim_piety.5.a:1 "存在一性論を拒否。"
  muslim_piety.5.b:1 "存在一性論を支持。"
  muslim_piety.6.t:1 "ズィンミーの建築制限"
- muslim_piety.6.d:1 "イスラム法のもとでは非イスラム教徒に対し、都市中心部で新しい建物を建設することに数多くの制限を課していた。家をイスラム教徒の家より高くすることはできず、新しい礼拝所を建設することは許されず、すでに存在している礼拝所の補修のみが認められた。実際にはこれらの規則が適用されないこともよくあったのだが、国内でイスラムが律法主義的解釈に傾くにつれて、ウラマーの主要人物からは規則をより厳格に履行するよう求める声が出始めている。"
+ muslim_piety.6.d:1 "イスラム法のもとでは非ムスリムに対し、都市中心部で新しい建物を建設することに数多くの制限を課していた。家をムスリムの家より高くすることはできず、新しい礼拝所を建設することは許されず、すでに存在している礼拝所の補修のみが認められた。実際にはこれらの規則が適用されないこともよくあったのだが、国内でイスラムが律法主義的解釈に傾くにつれて、ウラマーの主要人物からは規則をより厳格に履行するよう求める声が出始めている。"
  muslim_piety.6.a:1 "法律を条文通りに施行する。"
  muslim_piety.6.b:1 "彼らの好きなようにさせておこう。"
  muslim_piety.7.t:1 "ズィンミーによる建築制限の無視"
