--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -17,7 +17,7 @@
  enforce_trader_privileges_reform:0 "商業特権の施行"
  enforce_trader_privileges_reform_desc:0 "国家と成功した商業企業との関係を強化することで、私たちは世界に広がるだけでなく、自国に持ち込む利益を増やすことができます。"
  indian_sultanate_reform:0 "インド・スルタン国"
- indian_sultanate_reform_desc:0 "少数派であるイスラム教徒に支配されたインドのスルタン国は、伝統的なイスラムの王政に対する考え方を発展させ、拡大しなければならなかった。 彼らがイスラム国家のままでいるために、伝統的にユダヤ人とキリスト教徒を取り扱ってきたズィンミーの役割は、インド宗教にまで拡大された。"
+ indian_sultanate_reform_desc:0 "少数派であるムスリムに支配されたインドのスルタン国は、伝統的なムスリム王政に対する考え方を発展させ、拡大しなければならなかった。 彼らがイスラム国家のままでいるために、伝統的にユダヤ人とキリスト教徒を取り扱ってきたズィンミーの役割は、インド宗教にまで拡大された。"
  bengali_reform:0 "ベンガル商人の強化"
  bengali_reform_desc:0 "ベンガル湾とガンジス川によるデルタは肥沃な土地であるだけでなく、何よりもインドの港として、その河口は常に商人や商業をひきつけてきた。この土地はこの手の剣によって獲得したとはいえ、船の所有者と商人は、我々の州にとって高貴な領主と同等に重要であり、影響力がある。"
  sufi_syncretism_reform:0 "スーフィー習合"
@@ -297,7 +297,7 @@
  mechanic_different_religion_acceptance:0 "異教寛容度：$VALUE|R$"
  mechanic_different_religion_group_acceptance:0 "異教寛容度：$VALUE|R$"
  indian_sultanate_legacy:0 "インド・スルタン国"
- indian_sultanate_legacy_desc:0 "少数派であるイスラム教徒に支配されたインドのスルタン国は、伝統的なイスラムの王政に対する考え方を発展させ、拡大しなければならなかった。 彼らがイスラム国家のままでいるために、伝統的にユダヤ人とキリスト教徒を取り扱ってきたズィンミーの役割は、インド宗教にまで拡大された。"
+ indian_sultanate_legacy_desc:0 "少数派であるムスリムに支配されたインドのスルタン国は、伝統的なムスリム王政に対する考え方を発展させ、拡大しなければならなかった。 彼らがイスラム国家のままでいるために、伝統的にユダヤ人とキリスト教徒を取り扱ってきたズィンミーの役割は、インド宗教にまで拡大された。"
  SUPPORT_LOCAL_HEIR_MONTHLY_GAIN:0 "州の後継者支持獲得：$SUPPORT|+2$/月\n$MODIFIERS$\n"
  permanent_marathas_council_reform:0 "マラーター常任理事会"
  permanent_marathas_council_reform_desc:0 "マラーターの将軍と市民団体の指導者は、我が国家の力の均衡の重要な部分である。我々は会合を正式化し、国を導くためのマラーターの常設評議会を設立すべきである。"
