--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -306,8 +306,8 @@
  desc_janissary_coup_pay:0 "政府に対する偉大な影響力を利用して、イェニチェリは彼らの賃金を引き上げる好機だと考えている。"
  strictly_enforced_janissary_discipline:0 "厳格な規律の強制"
  desc_strictly_enforced_janissary_discipline:0 "我々は、支配下にあるイェニチェリに対して、できる限り厳密にすべての規則を強制するため、できる限りのことを行っている。"
- non_christian_janissaries:0 "イスラム教徒のイェニチェリの募兵の増大"
- desc_non_christian_janissaries:0 "デヴシルメ制を経由せず、帝国のイスラム教徒の一族から募集されるイェニチェリがますます増えている。"
+ non_christian_janissaries:0 "ムスリムのイェニチェリの募兵の増大"
+ desc_non_christian_janissaries:0 "デヴシルメ制を経由せず、帝国のムスリムの一族から募集されるイェニチェリがますます増えている。"
  friday_prayers:0 "金曜礼拝"
  desc_friday_prayers:0 "シーア派の慣習とは対照的に、我々は、地域社会の中でより大きな結束を生み出すため、我が国における金曜礼拝を許可した。"
  loss_of_legal_competence:0 "法的能力の喪失"
@@ -577,7 +577,7 @@
  liberator_of_jerusalem:0 "エルサレムの解放者"
  desc_liberator_of_jerusalem:0 "我々は異教徒からエルサレムを救った。我が国の正義のキリスト教徒は、我々の支配者がキリスト教世界にもたらした素晴らしい奉仕を決して忘れることはないだろう。"
  liberator_of_mecca:0 "メッカの解放者"
- desc_liberator_of_mecca:0 "我々は異教徒からメッカを救った。我が国の正義のイスラム教徒は、我々の支配者が聖なる街を守っていることを決して忘れることはないだろう。"
+ desc_liberator_of_mecca:0 "我々は異教徒からメッカを救った。我が国の正義のムスリムは、我々の支配者が聖なる街を守っていることを決して忘れることはないだろう。"
  converting_the_pagans:0 "異教徒の改宗"
  desc_converting_the_pagans:0 "注目を浴びる異教徒の地域の改宗は、それを通じて学んだものと、新たに改宗されたキリスト教徒が古い信仰の中で言葉を広めるのを助けたことの両面において、我々の宣教師に恩恵をもたらした。"
  local_colonial_expansion:0 "植民地の成長"
@@ -625,7 +625,7 @@
  conquest_of_persia:0 "ペルシアの征服者"
  desc_conquest_of_persia:0 "ペルシア国家はもはやホラーサーンだけを意味するものではない。征服者としての我々の支配者の評判は、我々の旗の下に群がる新兵たちを鼓舞し、我々の商人階級は、新たに征服された土地にある多くの可能性を利用している。"
  controlling_the_steppes:0 "ステップの支配"
- desc_controlling_the_steppes:0 "未開のステップは何世紀にもわたって、信心深いロシア人にとって人生を非常に困難にしてきた様々な集団の本拠地であった。これらの広大な地域を平定することによって、我々は人々が安全であり、イスラム教徒の遊牧民を阻止することを確認している。"
+ desc_controlling_the_steppes:0 "未開のステップは何世紀にもわたって、信心深いロシア人にとって人生を非常に困難にしてきた様々な集団の本拠地であった。これらの広大な地域を平定することによって、我々は人々が安全であり、ムスリム遊牧民を阻止することを確認している。"
  achieved_religious_unity_mission:0 "信仰の団結"
  desc_achieved_religious_unity_mission:0 "我が国の真の信仰を強化するための努力の成功は、我々の支配者と国家に対する支援の一時的な急増をもたらした。"
  thriving_ship_building_sector:0 "造船部門の繁栄"
@@ -633,7 +633,7 @@
  british_ambition:0 "イギリスの野望"
  desc_british_ambition:0 "ブリテン諸島を1つの国家と見なされることに成功した我々の野望は、我々の言葉と国際的な評判に新たな重みを添えた。"
  completing_the_reconquista:0 "レコンキスタの完了"
- desc_completing_the_reconquista:0 "レコンキスタを完成させ、将来にわたってイベリアをイスラム教徒の侵入から安全なものにすることへの我々の闘いの成功は、我が軍に貴重な経験と、より強い決意とを残した。"
+ desc_completing_the_reconquista:0 "レコンキスタを完成させ、将来にわたってイベリアをムスリムの侵入から安全なものにすることへの我々の闘いの成功は、我が軍に貴重な経験と、より強い決意とを残した。"
  venetian_terra_firma:0 "拡張する土地"
  desc_venetian_terra_firma:0 "イタリア北部本土への支配の成長により、多くの古い行政の伝統を取り除くことができ、すべての本土の所有物に対してより効率的に課税することができるようになった。"
  lithuanian_russian_ambition:0 "ロシア国家の支配"
@@ -733,7 +733,7 @@
  nyau_secret_society:0 "ニャウの秘密結社"
  desc_nyau_secret_society:0 "我々の人々は、彼らの宗教の秘密組織によって組織化されている。"
  oriental_press:0 "メディチ家印刷所"
- desc_oriental_press:0 "メディチ家印刷所はアラビア語で作品を印刷し、イスラム教徒の科学者や哲学者との交流を引き起こしている。もちろん、彼らを改宗する意図を持って。"
+ desc_oriental_press:0 "メディチ家印刷所はアラビア語で作品を印刷し、ムスリムの科学者や哲学者との交流を引き起こしている。もちろん、彼らを改宗する意図を持って。"
  friction_among_troops:0 "軍隊間の摩擦"
  desc_friction_among_troops:0 "貿易同盟の異なる集団からの軍隊の間の確執は、我々の軍隊に問題を引き起している。"
  merchants_angered:0 "商人たちの怒り"
@@ -1682,7 +1682,7 @@
  mlw_well_fed:0 "良い食事"
  desc_mlw_well_fed:0 "バゲル人を征服した際、我が兵士はご馳走をたらふく食べた。彼らは腹いっぱいで次の目標に向かって行進するだろう。"
  mlw_interfaith_marriage:0 "異教徒間との婚姻"
- desc_mlw_interfaith_marriage:0 "ヒンドゥー教徒とイスラム教徒は、我が王族の家系の結婚を通じて実証したように、敵である必要はない。"
+ desc_mlw_interfaith_marriage:0 "ヒンドゥー教徒とムスリムは、我が王族の家系の結婚を通じて実証したように、敵である必要はない。"
  mlw_coalition:0 "マールワー同盟"
  desc_mlw_coalition:0 "強い同盟国と一緒に広大な土地を征服しよう。"
  mlw_fortified:0 "要塞化されたマーンドゥー"
@@ -1859,9 +1859,9 @@
  brahmin_peshwa_nonhindu:0 "バラモンのペーシュワー"
  desc_brahmin_peshwa_nonhindu:0 "有能なバラモンは、我々の国家元首であるペーシュワーの要職を保持している。"
  brahmins_alienating_merchants:0 "バラモンによる商人の阻害"
- desc_brahmins_alienating_merchants:0 "バラモンの政策と社会的態度は、イスラム教徒の商人をこの州から遠ざけている。"
- brahmins_stopped_alienating_merchants:0 "イスラム商人の誘致"
- desc_brahmins_stopped_alienating_merchants:0 "ヴァイシャは今やこの州を支配し、イスラム商人を誘致する政策を制定している。"
+ desc_brahmins_alienating_merchants:0 "バラモンの政策と社会的態度は、ムスリム商人をこの州から遠ざけている。"
+ brahmins_stopped_alienating_merchants:0 "ムスリム商人の誘致"
+ desc_brahmins_stopped_alienating_merchants:0 "ヴァイシャは今やこの州を支配し、ムスリム商人を誘致する政策を制定している。"
  brahmin_orthodoxy_enforced:0 "バラモンの正統性の強制"
  desc_brahmin_orthodoxy_enforced:0 "正統なバラモンの協力の下、非バラモン宗教運動は行なわれている。"
  nonbrahmin_movements:0 "非バラモン宗教運動"
@@ -2006,9 +2006,9 @@
  sapta_puri_modifier:0 "七聖都"
  desc_sapta_puri_modifier:0 "ヒンドゥー教の7つの神聖な巡礼地をしている。忠実な人々は、我々の宗教的情熱に触発されている。"
  ulemma_appeased:0 "ウラマーの鎮撫"
- desc_ulemma_appeased:0 "ウラマーの関心事は、ヒンドゥー教のバラモンのそれより優先されている。これはイスラム教徒の臣民を鎮撫する。"
+ desc_ulemma_appeased:0 "ウラマーの関心事は、ヒンドゥー教のバラモンのそれより優先されている。これはムスリム臣民を鎮撫する。"
  gen_brahmin_loyalty:0 "バラモンの忠誠"
- desc_gen_brahmin_loyalty:0 "ヒンドゥー教のバラモンの関心事は、イスラム教徒のウラマーのそれよりも持ち上げられている。これは我々のヒンドゥー教徒の臣民を鎮撫する。"
+ desc_gen_brahmin_loyalty:0 "ヒンドゥー教のバラモンの関心事は、ムスリムのウラマーのそれよりも持ち上げられている。これは我々のヒンドゥー教徒の臣民を鎮撫する。"
  gen_sufi_shrines:0 "スーフィー聖廟の管理"
  desc_gen_sufi_shrines:0 "現在、インドの最も重要なスーフィーの聖廟を管理し、大いに後援している。スーフィーは我が領域に呼び寄せられ、彼らがその土地を旅する際にイスラム信仰を広め始めた。"
  sikh_conversion:0 "パンジャーブの征服"
@@ -2109,7 +2109,7 @@
  mor_north_sea_corsairs:0 "北海の私掠船"
  desc_mor_north_sea_corsairs:0 "北海で安定して略奪を行うには、ブリテン島付近の海域に出現する強力なガレオン船に対抗できるくらい大きな船で我々も出帆する必要がある。"
  mor_andalucia:0 "レ・レコンキスタ"
- desc_mor_andalucia:0 "我々はキリスト教徒からアル＝アンダルスを取り戻し、イベリア半島で再びイスラム教徒による統治を確立している。"
+ desc_mor_andalucia:0 "我々はキリスト教徒からアル＝アンダルスを取り戻し、イベリア半島で再びムスリムによる統治を確立している。"
  mor_tunis_conquest:0 "チュニスの征服"
  desc_mor_tunis_conquest:0 "チュニスを完全に征服したことで、彼らのために働いていた船や船長は今や我々のために働く。"
  mor_beyond_the_canaries:0 "カナリア諸島のその先"
