--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -557,7 +557,7 @@
  PROV576:0 "カラート"
  PROV577:0 "クエッタ"
  PROV578:0 "ロウ"
- PROV579:0 "マランク"
+ PROV579:0 "ミャウウー"
  PROV580:0 "カレ"
  PROV581:0 "サガイン"
  PROV582:0 "モンヤン"
