--- a/source/localisation/decisions_l_english.yml
+++ b/source/localisation/decisions_l_english.yml
@@ -88,8 +88,8 @@
  pagan_conversion_to_christianity_desc:0 "我が国のクリスチャンはキリスト教を広く布教している。彼らは改宗によって他のキリスト教国との距離が近づくと主張している。"
  pagan_conversion_to_christianity_tooltip:0 "[Root.GetName]は、新しい国教として、彼らの国民によって実践されているキリスト教の信仰を採用する。"
  pagan_conversion_to_islam_title:0 "イスラムに改宗"
- pagan_conversion_to_islam_desc:0 "我が国のムスリムはイスラムを広く布教している。彼らは改宗によって他のイスラム教国との距離が近づくと主張している。"
- pagan_conversion_to_islam_tooltip:0 "[Root.GetName]は、新しい国教として、彼らの国民によって実践されているイスラムの信仰を採用する。"
+ pagan_conversion_to_islam_desc:0 "我が国のムスリムはイスラムを広く布教している。彼らは改宗によって他のムスリム諸国との距離が近づくと主張している。"
+ pagan_conversion_to_islam_tooltip:0 "[Root.GetName]は、臣民によって実践されているムスリム信仰を新しい国教として採用する。"
  pagan_conversion_to_buddhism_title:0 "仏教に改宗"
  pagan_conversion_to_buddhism_desc:0 "我が国の仏教徒は仏教を広く布教している。彼らは改宗によって他の仏教国との距離が近づくと主張している。"
  pagan_conversion_to_buddhism_tooltip:0 "[Root.GetName]は、新しい国教として、彼らの国民によって実践されている東方の信仰を採用する。"
@@ -153,7 +153,7 @@
  conversion_of_convenience_title:0 "[Root.Religion.GetName]の[Root.Monarch.GetTitle]のための時代？"
  conversion_of_convenience_desc:0 "[Root.Monarch.GetName][Root.Monarch.GetHerselfHimself]が公式の国教に従わないという事実は、[Root.GetAdjective]の人々の精神と心のために戦っている側の者たちにとって、長い間大きな悩みの種であり続けている。あるいは、[Root.Monarch.GetName]が[Root.Monarch.GetHerHis]の人々の幸福を、信仰の個人的な問題に優先させる時だろうか？"
  reform_into_iqta_title:0 "イスラム政府を採用"
- reform_into_iqta_desc:0 "王権と統治は多くのことができ、我々が頼りにする伝統はイスラム世界の主流の外にある。イクター制を採用することによって、我々は、唯一の信頼できるアミールに与えられた収入の権限により、直接、王国の土地に我々の権威を主張することができる。"
+ reform_into_iqta_desc:0 "王権と統治には多様な形態があり、我々の伝統はイスラム世界の主流ではない。イクター制を採用することによって、信頼できるアミールにのみ徴税権を授与し、領土に直接支配を及ぼすことができる。"
  enforce_religion_muslim_title:0 "宗教的統一を強制"
  enforce_religion_muslim_desc:0 "我々は帝国内で異端を許容する訳にはいかない。間違った宗教的指導者や司祭の流儀に従う全ての信者を対象とする厳しい法体制により、我々は帝国内に蔓延る全ての異端勢力を排除することができる。"
  remove_non_electors_emperors_from_empire_effect_tooltip:0 "全ての所有州は神聖ローマ帝国から抜け出します。"
@@ -167,7 +167,7 @@
  nepal_nation_desc:0 "ヒマラヤの王国の多くは誇り高く長大な歴史を持つものの、国力は貧弱で分裂状態にある。我々はヒマラヤ地域一帯を一つの王国の下統一せねばならない。団結した我らは、代々贅沢な生活に甘んじ国庫をすり減らしてきたインドの諸王などに負けはしない。彼らの軍もまた我らの鍛え上げられた軍の相手ではない。"
  timurid_claims_abandoned_tooltip:0 "§Rペルシア、ホラーサーン、コーカサス、中央アジアのすべての地方の請求権が失われます。§!"
  rajput_nation_title:0 "ラージプートの統一"
- rajput_nation_desc:0 "何世紀もの昔にイスラム勢力による侵攻があり、以降ラージプートの土地は分裂状態が続き弱体化している。我々はかつての偉大な諸国の偉大な都市を取り戻し、ラージプートの王たちを結束させなければならない！"
+ rajput_nation_desc:0 "何世紀もの昔にムスリム勢力による侵攻があり、以降ラージプートの土地は分裂状態が続き弱体化している。我々はかつての偉大な諸国の偉大な都市を取り戻し、ラージプートの王たちを結束させなければならない！"
  deccan_nation_title:0 "デカンのスルタン"
  deccan_nation_desc:0 "この土地はかつて我が祖先とは無関係であったが、我がものとした。ここでは、ペルシアの影響が現地の古代インドの伝統と接触し、新しい社会を築き上げた。自国語や自国の行政の伝統、自国の神話や伝説を持っている。南部がその差異を克服し、一つとして融和していることを世界に示す時だ。"
  maratha_nation_title:0 "マラーター同盟"
@@ -181,7 +181,7 @@
  cossack_nation_title:0 "ステップの呼び声"
  cossack_nation_desc:0 "我々は先祖の伝統に忠実に、コサックの方法で国家を支配しなければなりません！"
  become_indian_sultanate_title:0 "スルタン国のインド化"
- become_indian_sultanate_desc:0 "インドのイスラム教スルタン国家として大きく繁栄したいならば、伝統的なイスラム王政の考えを進化させ、拡大せねばならない。我々はイスラム国家のままである一方で、ズィンミーの役割はダルマ宗教にも及ぶだろう。"
+ become_indian_sultanate_desc:0 "インドのムスリム・スルタン国家として大きく繁栄したいならば、伝統的なムスリム王政の考えを進化させ、拡大せねばならない。我々はイスラム国家のままである一方で、ズィンミーの役割はダルマ宗教にも及ぶだろう。"
  unite_japan_subject_tooltip:1 "日本のすべての従属大名は独立します。\n我々は従属大名が所有する州にあるすべての§Y中核州§!を失います。\n日本のすべての従属大名：\n§Y大名§!政府改革が廃止されます！"
  curtail_prussian_confederation_title:0 "プロシア連合の縮小"
  curtail_prussian_confederation_desc:0 "手に負えない状況に陥らないよう、プロシア連合を終わらせねばならない。宥和政策か抑圧政策かどちらが正しい道かを決断せねばならない。"
