--- a/source/localisation/mandate_of_heaven_l_english.yml
+++ b/source/localisation/mandate_of_heaven_l_english.yml
@@ -226,8 +226,8 @@
  desc_harmonized_zoroastrian_group:0 "我々は、我々の国家と国民の精神にゾロアスター教の信仰を組み込んでいる。"
  harmonized_dharmic:0 "インド亜大陸の信仰との調和"
  desc_harmonized_dharmic:0 "国家と国民の精神にインド亜大陸の信仰を組み込んでいる。"
- harmonized_muslim:0 "イスラム教徒の調和"
- desc_harmonized_muslim:0 "我々の国家と国民の精神にイスラム教の信仰を組み込んでいる。"
+ harmonized_muslim:0 "ムスリムとの調和"
+ desc_harmonized_muslim:0 "我々の国家と国民の精神にムスリム信仰を組み込んでいる。"
  harmonized_christian:0 "キリスト教との調和"
  desc_harmonized_christian:0 "我々の国家と国民の精神にキリスト教の信仰を組み込んでいる。"
  harmonization_classics_translated:0 "古典の翻訳"
@@ -260,7 +260,7 @@
  confucian_events.2.d:0 "時の経過とともに、我々のキリスト教徒の国民たちは我々のやり方に慣れ、我々の儀式と優れた統治理念へと引き継がれた。かつて教育と統治のための古典と我々の制度に対する不信があったが、今では理解が広がっている。我々のキリスト教の国民たちは次々と取り入れられ、我々の[Root.GovernmentName]の一部となり、その習慣の一部は我々のものとなっている。[Root.Capital.GetCapitalName]では、最高の教育を受けた儒教の学者の一部にさえ、キリスト教の習慣や、キリスト教の教会を訪れるのを見ることができる。"
  confucian_events.2.a:0 "「美徳ある人々に服従し、悟りで人々を同化させよ」"
  confucian_events.3.t:0 "イスラムの調和"
- confucian_events.3.d:1 "イスラムは何世紀にもわたって我々の土地における少数派の宗教であった。しかし、時がたつにつれて、我々の社会のより一体化した部分へと成長した。イスラム教徒の思想は、我々の伝統、儀式、やり方と統合され、調和しており、我々は、宗教が自身の目的に適合するために提供すべきものを最大限活用してきた。[Root.Capital.GetCapitalName]の周辺の地区でさえ、イスラムの学者、医者、商人、農場主、農民を見ることができる。彼らが我々の[Root.Monarch.GetTitle]に従っている限り、アッラーの信者は我々の社会の不可欠な一部である。"
+ confucian_events.3.d:1 "イスラムは何世紀にもわたって我々の土地における少数派の宗教であった。しかし、時がたつにつれて、我々の社会のより一体化した部分へと成長した。ムスリムの思想は、我々の伝統、儀式、やり方と統合され、調和しており、我々は、宗教が自身の目的に適合するために提供すべきものを最大限活用してきた。[Root.Capital.GetCapitalName]の周辺の地区でさえ、イスラム教の学者、医者、商人、農場主、農民を見ることができる。彼らが我々の[Root.Monarch.GetTitle]に従っている限り、アッラーの信者は我々の社会の不可欠な一部である。"
  confucian_events.3.a:0 "「美徳ある人々に服従し、悟りで人々を同化させよ」"
  confucian_events.4.t:0 "インド亜大陸の信仰の調和"
  confucian_events.4.d:0 "インド亜大陸の信仰は、何千年もの間、我々自身のものと絡み合ってきたが、我々の信念は、ほぼ同じくらい長い間分離していた。長い間、我々が理性と古典的な学問を賞賛する中で、彼らは多様性と古代の精神的な力のために努力していると信じられてきた。しかし、ここ数年の間に、我々はインド亜大陸の信仰社会を我々と統合し、哲学と学問という同じように強い伝統に、彼らの信念を適合させるよう努めてきた。我々は前を見据えて、インド亜大陸信仰の万神殿の多様性が儒教の古典と共に尊重される共通の未来を思い起こす。我々は共に、より強く、より耐久性のある国家のための新しい儀式と伝統を作り上げている。"
